Skip to content

A specific mp4 won't play on 4.0 (OK on 3.0)

cf. #2904 (closed)

Here is the sample: http://samples.mplayerhq.hu/MPEG-4/Concession_LAN_800k.mp4

xeon ~/work/git/vlc/build-linux $ ./vlc /home/tom/Downloads/Concession_LAN_800k.mp4 -vv --no-media-library
VLC media player 4.0.0-dev Otto Chriek (revision 4.0.0-dev-26545-g9046c93e35e)
See the documentation for gdk_window_ensure_native() on how to get native windows.
[00007f72fe9d7ae8] [qt] main generic debug: using qt theme provider module "qt_gtktheme"
[00007fff64bcbad8] main generic debug: using interface module "qt"
[0000558034642130] main input debug: Creating an input for 'Concession_LAN_800k.mp4'
[0000558034641730] [qt] qt generic debug: on_player_current_media_changed
[0000558034641730] [qt] qt generic debug: on_player_state_changed
[0000558034641730] [qt] qt generic debug: on_player_buffering
[0000558034642130] main input debug: using timeshift granularity of 50 MiB
[0000558034642130] main input debug: using default timeshift path
[0000558034642130] main input debug: `file:///home/tom/Downloads/Concession_LAN_800k.mp4' gives access `file' demux `any' path `/home/tom/Downloads/Concession_LAN_800k.mp4'
[00007f7264001350] main access debug: creating access: file:///home/tom/Downloads/Concession_LAN_800k.mp4
[00007f7264001350] main access debug:  (path: /home/tom/Downloads/Concession_LAN_800k.mp4)
[00007f72a0417898] main generic debug: looking for access module matching "file": 4 candidates
[00007f72a0417898] main generic debug: using access module "filesystem"
[00007f72a04178d8] main generic debug: looking for stream_filter module matching "prefetch,cache": 3 candidates
[00007f7264001b00] cache_read stream filter debug: Using stream method for AStream*
[00007f7264001b00] cache_read stream filter debug: starting pre-buffering
[00007f7264001b00] cache_read stream filter debug: received first data after 0 ms
[00007f7264001b00] cache_read stream filter debug: pre-buffering done 1024 bytes in 0s - 58823 KiB/s
[00007f72a04178d8] main generic debug: using stream_filter module "cache_read"
[00007f72a04178e8] main generic debug: looking for stream_filter module matching "any": 8 candidates
[00007f72a04178e8] main generic debug: no stream_filter modules matched with name any
[00007f72a0417928] main generic debug: looking for stream_directory module matching "any": 1 candidates
[00007f72a0417928] main generic debug: no stream_directory modules matched with name any
[0000558034642130] main input debug: attachment of directory-extractor failed for file:///home/tom/Downloads/Concession_LAN_800k.mp4
[00007f72a04178d8] main generic debug: looking for stream_filter module matching "record": 1 candidates
[00007f72a04178d8] main generic debug: using stream_filter module "record"
[0000558034642130] main input debug: creating demux "any", URL: file:///home/tom/Downloads/Concession_LAN_800k.mp4, path: /home/tom/Downloads/Concession_LAN_800k.mp4
[00007f72a04178f8] main generic debug: looking for demux module matching "ext-mp4": 66 candidates
[00007f7264c025b0] mp4 stream filter debug: read box: "mvhd" timescale 1000 duration 30130 (0:00:30:130) rate 1,00 volume 1,00
[00007f7264c025b0] mp4 stream filter debug: read box: "tkhd" track #1 duration 0 layer 0 volume 0,0 rotation 0,0 scale 1,00x1,00 translate +0,00+0,00 size 0x0. Matrix: 65536 0 0 0 65536 0 0 0 1073741824
[00007f7264c025b0] mp4 stream filter debug: read box: "mdhd" timescale 1000 duration 0 (0:00:00:000) language    
[00007f7264c025b0] mp4 stream filter debug: read box: "url" url: (null)
[00007f7264c025b0] mp4 stream filter debug: read box: "dref" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stts" entry-count 1
[00007f7264c025b0] mp4 stream filter warning: Failed reading box stsd
[00007f7264c025b0] mp4 stream filter debug: read box: "stsz" sample-size 33 sample-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stsc" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "co64" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "ctts" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "hdlr" handler type: "odsm" name: "odsm"
[00007f7264c025b0] mp4 stream filter debug: read box: "chap" 4 references
[00007f7264c025b0] mp4 stream filter debug: read box: "tkhd" track #2 duration 0 layer 0 volume 0,0 rotation 0,0 scale 1,00x1,00 translate +0,00+0,00 size 0x0. Matrix: 65536 0 0 0 65536 0 0 0 1073741824
[00007f7264c025b0] mp4 stream filter debug: read box: "mdhd" timescale 1000 duration 0 (0:00:00:000) language    
[00007f7264c025b0] mp4 stream filter debug: read box: "url" url: (null)
[00007f7264c025b0] mp4 stream filter debug: read box: "dref" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stts" entry-count 1
[00007f7264c025b0] mp4 stream filter warning: Failed reading box stsd
[00007f7264c025b0] mp4 stream filter debug: read box: "stsz" sample-size 59 sample-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stsc" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "co64" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "ctts" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "hdlr" handler type: "sdsm" name: "sdsm"
[00007f7264c025b0] mp4 stream filter debug: read box: "tkhd" track #3 duration 30116 layer 0 volume 1,0 rotation 0,0 scale 1,00x1,00 translate +0,00+0,00 size 0x0. Matrix: 65536 0 0 0 65536 0 0 0 1073741824
[00007f7264c025b0] mp4 stream filter debug: read box: "mdhd" timescale 1000 duration 30116 (0:00:30:116) language    
[00007f7264c025b0] mp4 stream filter debug: read box: "url" url: (null)
[00007f7264c025b0] mp4 stream filter debug: read box: "dref" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stts" entry-count 572
[00007f7264c025b0] mp4 stream filter warning: Failed reading box stsd
[00007f7264c025b0] mp4 stream filter debug: read box: "stsz" sample-size 0 sample-count 1298
[00007f7264c025b0] mp4 stream filter debug: read box: "stsc" entry-count 13
[00007f7264c025b0] mp4 stream filter debug: read box: "co64" entry-count 13
[00007f7264c025b0] mp4 stream filter debug: read box: "ctts" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "smhd" balance 0,000000
[00007f7264c025b0] mp4 stream filter debug: read box: "hdlr" handler type: "soun" name: "soun"
[00007f7264c025b0] mp4 stream filter debug: read box: "tkhd" track #4 duration 30130 layer 0 volume 0,0 rotation 0,0 scale 1,00x1,00 translate +0,00+0,00 size 320x240. Matrix: 65536 0 0 0 65536 0 0 0 1073741824
[00007f7264c025b0] mp4 stream filter debug: read box: "mdhd" timescale 1000 duration 30130 (0:00:30:130) language    
[00007f7264c025b0] mp4 stream filter debug: read box: "url" url: (null)
[00007f7264c025b0] mp4 stream filter debug: read box: "dref" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stts" entry-count 536
[00007f7264c025b0] mp4 stream filter warning: Failed reading box stsd
[00007f7264c025b0] mp4 stream filter debug: read box: "stsz" sample-size 0 sample-count 698
[00007f7264c025b0] mp4 stream filter debug: read box: "stsc" entry-count 37
[00007f7264c025b0] mp4 stream filter debug: read box: "co64" entry-count 37
[00007f7264c025b0] mp4 stream filter debug: read box: "ctts" entry-count 1
[00007f7264c025b0] mp4 stream filter debug: read box: "stss" entry-count 23
[00007f7264c025b0] mp4 stream filter debug: read box: "vmhd" graphics-mode 0 opcolor (0, 0, 0)
[00007f7264c025b0] mp4 stream filter debug: read box: "hdlr" handler type: "vide" name: "vide"
[00007f7264c025b0] mp4 stream filter warning: unknown box type MDES (incompletely loaded)
[00007f7264c025b0] mp4 stream filter debug: read box: "iods" objectDescriptorId: 514, OD: 25, scene: 0, audio: 79, visual: 255, graphics: 1
[00007f7264c025b0] mp4 stream filter debug: dumping root Box "root"
[00007f7264c025b0] mp4 stream filter debug: |   + skip size 8 offset 0
[00007f7264c025b0] mp4 stream filter debug: |   + mdat size 2500370 offset 8
[00007f7264c025b0] mp4 stream filter debug: |   + moov size 20079 offset 2500378
[00007f7264c025b0] mp4 stream filter debug: |   |   + mvhd size 108 offset 2500386
[00007f7264c025b0] mp4 stream filter debug: |   |   + trak size 520 offset 2500494
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + tkhd size 92 offset 2500502
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + mdia size 348 offset 2500594
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + mdhd size 32 offset 2500602
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + minf size 271 offset 2500634
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + dinf size 36 offset 2500642
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + dref size 28 offset 2500650
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   |   + url  size 12 offset 2500666
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + stbl size 215 offset 2500678
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stts size 24 offset 2500686
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsz size 20 offset 2500801
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsc size 28 offset 2500821
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stco size 20 offset 2500849
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + ctts size 24 offset 2500869
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + nmhd size 12 offset 2500893
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + hdlr size 37 offset 2500905
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + tref size 32 offset 2500942
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + mpod size 24 offset 2500950
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + free size 40 offset 2500974
[00007f7264c025b0] mp4 stream filter debug: |   |   + trak size 495 offset 2501014
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + tkhd size 92 offset 2501022
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + mdia size 355 offset 2501114
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + mdhd size 32 offset 2501122
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + minf size 278 offset 2501154
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + dinf size 36 offset 2501162
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + dref size 28 offset 2501170
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   |   + url  size 12 offset 2501186
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + stbl size 222 offset 2501198
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stts size 24 offset 2501206
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsz size 20 offset 2501328
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsc size 28 offset 2501348
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stco size 20 offset 2501376
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + ctts size 24 offset 2501396
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + nmhd size 12 offset 2501420
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + hdlr size 37 offset 2501432
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + free size 40 offset 2501469
[00007f7264c025b0] mp4 stream filter debug: |   |   + trak size 10479 offset 2501509
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + tkhd size 92 offset 2501517
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + mdia size 10339 offset 2501609
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + mdhd size 32 offset 2501617
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + minf size 10262 offset 2501649
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + dinf size 36 offset 2501657
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + dref size 28 offset 2501665
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   |   + url  size 12 offset 2501681
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + stbl size 10202 offset 2501693
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stts size 4592 offset 2501701
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsz size 5212 offset 2506419
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsc size 172 offset 2511631
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stco size 68 offset 2511803
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + ctts size 24 offset 2511871
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + smhd size 16 offset 2511895
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + hdlr size 37 offset 2511911
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + free size 40 offset 2511948
[00007f7264c025b0] mp4 stream filter debug: |   |   + trak size 8355 offset 2511988
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + tkhd size 92 offset 2511996
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + mdia size 8215 offset 2512088
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + mdhd size 32 offset 2512096
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + minf size 8138 offset 2512128
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + dinf size 36 offset 2512136
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + dref size 28 offset 2512144
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   |   + url  size 12 offset 2512160
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + stbl size 8074 offset 2512172
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stts size 4304 offset 2512180
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsz size 2812 offset 2516678
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stsc size 460 offset 2519490
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stco size 164 offset 2519950
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + ctts size 24 offset 2520114
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   |   + stss size 108 offset 2520138
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   |   + vmhd size 20 offset 2520246
[00007f7264c025b0] mp4 stream filter debug: |   |   |   |   + hdlr size 37 offset 2520266
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + free size 40 offset 2520303
[00007f7264c025b0] mp4 stream filter debug: |   |   + udta size 72 offset 2520343
[00007f7264c025b0] mp4 stream filter debug: |   |   |   + MDES size 64 offset 2520351 (????)
[00007f7264c025b0] mp4 stream filter debug: |   |   + iods size 42 offset 2520415
[00007f7264c02780] mp4 demux debug: file type box missing (assuming ISO Media)
[00007f7264c02780] mp4 demux debug: found 4 tracks
[00007f7264c02780] mp4 demux debug: track 0x0 refs track 0x1 for mpod
[00007f7264c02780] mp4 demux debug: track 0x0 refs track 0x2 for mpod
[00007f7264c02780] mp4 demux debug: track 0x0 refs track 0x3 for mpod
[00007f7264c02780] mp4 demux debug: track 0x0 refs track 0x4 for mpod
[00007f7264c02780] mp4 demux debug: ignoring track[Id 0x1] 0 refs 0
[00007f7264c02780] mp4 demux debug: ignoring track[Id 0x2] 0 refs 0
[00007f7264c02780] mp4 demux debug: ignoring track[Id 0x3] 0 refs 0
[00007f7264c02780] mp4 demux debug: ignoring track[Id 0x4] 0 refs 0
[00007f72a04178f8] main generic debug: using demux module "mp4"
Edited by François Cartegnie
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information