demux: mp4: workaround post stsd media handler

Some bogus muxers (Philips Webcine) find funny
to declare late the required media handler
refs #28426